<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wrgardnersoft.watchftc.StatRankingsActivity">

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="Refresh"
        android:alphabeticShortcut="r"
        android:orderInCategory="-1"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_setup"
        android:orderInCategory="100"
        android:title="@string/setup"
        app:showAsAction="never" />

    <item
        android:orderInCategory="90"
        android:title="@string/file"
        app:showAsAction="never" >
        <menu>
            <item android:id="@+id/action_share"
                android:title="@string/share"/>
            <item android:id="@+id/action_save"
                android:title="@string/save"/>
            <item android:id="@+id/action_load"
                android:title="@string/load"/>
        </menu>
        </item>
    <item
        android:id="@+id/action_matches"
        android:orderInCategory="2"
        android:title="@string/matches"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ftc_rankings"
        android:orderInCategory="3"
        android:title="@string/ftcRankings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stat_rankings"
        android:orderInCategory="6"
        android:title="@string/stats"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_forecast"
        android:orderInCategory="7"
        android:title="@string/enableForecast"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stat_info"
        android:orderInCategory="8"
        android:title="@string/statInfo"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_teams"
        android:orderInCategory="5"
        android:title="@string/teams"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_division"
        android:orderInCategory="9"
        android:title="@string/change_division"
        app:showAsAction="never" />

</menu>
